--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
-    background-image:url('heeling.webp'); 
+    background-image:url('img.15.webp'); 
     background-repeat: no-repeat; 
     background-size: cover;
       font-family: "Roboto", sans-serif;
     }
     
     .signup-box {
-      width: 360px;
-      height: 850px;
+      width: 20%;
       margin: auto;
       background-color: white;
       border-radius: 3px;
@@ -18,8 +17,8 @@ body {
       padding-top: 15px;
     }
     form {
-      width: 300px;
-      margin-left: 20px;
+      width: 90%;
+      margin: 20px;
     }
     
     form label {
@@ -37,7 +36,7 @@ body {
       outline: none;
     }
     input[type="button"] {
-      width: 320px;
+      width: 100%;
       height: 35px;
       margin-top: 20px;
       border: none;
@@ -48,17 +47,15 @@ body {
     }
     p {
       text-align: center;
-      padding-top: 20px;
       font-size: 15px;
     }
     .para-1 {
       text-align: center;
       color: rgb(30, 102, 161);
-      font-size: 15px;
-      margin-top: -50px;
+      font-size: 17px;
     }
     .para-1 a {
-      color: #49c1a2;
+      color: #02533e;
     }
     
     
